--- a/.github/workflows/actions-demo.yml
+++ b/.github/workflows/actions-demo.yml
@@ -23,9 +23,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Run build process
-        run: echo "Your build process here"
+        run: echo "Building a cat"
         
       - name: Run tests
-        run: echo "Your test process here"
-        
-      # Add more steps as needed for your specific workflow
+        run: echo "OIIA OIIA"
