--- a/.github/workflows/actions-demo.yml
+++ b/.github/workflows/actions-demo.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run tests
         run: echo "OIIA OIIA"
   
-  test:
+  Feed-cat:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'workflow_dispatch'
@@ -41,7 +41,7 @@ jobs:
       - name: Feed
         run: echo "Feeding..."
   
-  load-test:
+  Pet-cat:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'workflow_dispatch'
@@ -52,9 +52,9 @@ jobs:
       - name: Wait
         run: sleep 15
   
-  production:
+  Release-cat:
     runs-on: ubuntu-latest
-    needs: [test, load-test]
+    needs: [Feed-cat, Pet-cat]
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'Production'
     environment:
       name: Release-cat
