--- a/.github/workflows/actions-demo.yml
+++ b/.github/workflows/actions-demo.yml
@@ -55,7 +55,7 @@ jobs:
   Release-cat:
     runs-on: ubuntu-latest
     needs: [Feed-cat, Pet-cat]
-    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'Production'
+    if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'Release-cat'
     environment:
       name: Release-cat
       url: https://writeabout.net
